--- a/static/index.html
+++ b/static/index.html
@@ -4,10 +4,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self'" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../src/css/index.css">
   </head>
   <body>
+    <div class="headerApp">
+      <div class="topBar">
+        <div class="topBar-menu">
+          <button id="buttonMenu" class="btn-header">
+            <img src="img/menu.svg" alt="" width="16" height="16">
+          </button>
+        </div>
+        <div class="dragWindow"></div>
+        <div class="topBar-manipulation">
+          <button id="buttonRolleDown" class="btn-header" title="Minimize">
+            <img src="img/rolle-down.svg" alt="" width="16" height="16">
+          </button>
+          <button id="buttonSquare" class="btn-header MaximizeBtn" title="Maximize">
+            <img src="img/square.svg" alt="" width="16" height="16"> 
+          </button>
+          <button id="buttonClose" class="btn-header btn-header_close" title="Close">
+            <img src="img/close.svg" alt="" width="16" height="16">
+          </button>
+        </div>
+      </div>
+      <div class="titleBar">
+        <h1>LEGEND</h1>
+      </div>
+      <div class="contentArea">
+        <div class="contentPages">
+
+        </div>
+      </div>
+    </div>
     <div id="root">
     </div>
     <script src="../build/js/app.js"></script>
+    <script src="../src/js/appFunctions.js"></script>
   </body>
 </html>
